
			     BZFlag release notes

* add new updates here without heading until a release

* -badword server support - Dave Brosius
* resize radar/msg area - Frank Thilo
* Drop team flags where player last was on exit - Dave Brosius
* tanks driving to fast are kicked - Dave Brosius
* remove non-printable characters in callsign in server - Frank Thilo
* +f sw{5} syntax to add a bunch of flags - Dave Brosius
* tanks which jump too high get kicked - Dave Brosius
* server drops bogus shots (anti cheating) - Tim Riker, Dave Brosius, Frank Thilo
* i18n support in client - Dave Brosius
* Optional config file interface for bzfs settings - Dave Brosius
* inline editing of text fields (<- ->) Dave Brosius, Frank Thilo
* extend admin command -> /flag reset unused - Dave Brosius

BZFlag 1.7g0 "Holy Dancing Monkeys" (was 1.7e7)
-------------------------------------------------------

* -tkkr auto team killer - Dave Brosius
* world file caching - Colin Bayer, Dave Brosius, others
* optional tank labels for roaming - Frank Thilo, Tim Riker
* draw tank lights correctly for (T)(N)(O) tanks - Dave Brosius
* new GUI options menu - Frank Thilo
* exclude observers from /idlestats list - Frank Thilo
* server based scoring - Dave Brosius, Tim Riker
* max. number of observers now defaults to 3 instead of 0 - Frank Thilo
* Use high water marks for player cnts to reduce looping - Dave Brosius
* new bzfs option -tk: team killers do not die - Frank Thilo
* misc @observer mode fixes - Andrew Greig
* Improved Mac OS X support - Kevin Avila
* disallow dud flags (eg jump in a jump world) - Dave Brosius
* self destruct key, for stuck tanks - Dave Brosius
* team killers die - Tim Riker
* increase max player and robot counts - Tim Riker
* Fix 'Change Key Mapping' arrowkeys - Andrew Greig 
* show the time in upper right if no flag
* opacity in config - Dave Brosius, Tim Riker
* [UN]SILENCE - Dave Brosius, Tim Riker
* revert lag falling patch - Tim Riker, Dave Brosius
* teamgrab.wav - Dave Brosius