@@ -437,6 +437,7 @@ void			HUDuiList::doRender()
 HUDuiTypeIn::HUDuiTypeIn() 
 : HUDuiControl(), maxLength(0), cursorPos(0)
 {
+  allowEdit = true; //by default allow editing
 }
 
 HUDuiTypeIn::~HUDuiTypeIn()
@@ -469,11 +470,18 @@ void			HUDuiTypeIn::setString(const std::string& _string)
   onSetFont();
 }
 
+// allows composing, otherwise not
+void			HUDuiTypeIn::setEditing(bool _allowEdit)
+{
+  allowEdit = _allowEdit;
+}
+
 bool			HUDuiTypeIn::doKeyPress(const BzfKeyEvent& key)
 {
   static const char backspace = '\b';	// ^H
   static const char whitespace = ' ';
-
+	
+  if (!allowEdit) return false; //or return true ??
   char c = key.ascii;
   if (c == 0) switch (key.button) {
     case BzfKeyEvent::Up:
@@ -560,7 +568,7 @@ void			HUDuiTypeIn::doRender()
   else
     stop = start + getFont().getWidth(string.getString() + cursorPos, 1);
 */
-  if (HUDui::getFocus() == this)
+  if (HUDui::getFocus() == this && allowEdit) 
     getFont().draw("_", getX() + start, getY());
 }
 
